# haskell-file-compression

./: README.md  haskell-file-compression.cabal  stack.yaml
resources/: teste.hzip  teste.txt
src/: Main.hs
src/Compression/: HuffmanTree.hs  LZ77.hs  SimplifiedDeflate.hs
test/: QuickChecks.hs
